...
            key: Key("headline"),
          ),
          icon: Icon(Icons.view_headline),
        ),
        BottomNavigationBarItem(
          title: Text(
            "News",
            key: Key("news"),
          ),
          icon: Icon(Icons.home),
        ),
        BottomNavigationBarItem(
          title: Text(
            "Favorite",
            key: Key("favorite"),
          ),
          icon: Icon(Icons.star),
        ),
      ],
    );
...
