...
                await launch(widget.feed.link);
              }
            },
            icon: Icon(Icons.open_in_browser),
          ),
          IconButton(
            key: Key("star_btn"),
            color: isStar ? Colors.yellow : null,
            onPressed: () async {
              DatabaseProvider provider = Provider.of(context, listen: false);
              if (isStar) {
                // delete feed from db
                await provider.deleteFeedFromDB(widget.feed);
...
